vehicle/tests/golden/error/dataset/mismatchedDimensionSize/mismatchedDimensionSize.vcl
-- Test passes dataset with 4 elements in it
@dataset
trainingDataset : Vector Nat 5
